--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <div class="iframe">
             <iframe title="Are location"
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19849.47908896918!2d-0.19988479999999997!3d51.5465087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1653596934333!5m2!1sen!2suk"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47625.94403825245!2d20.97958219178441!3d55.91731003113163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e4f27dc95f91cd%3A0x400d18c840bd4c0!2sPalanga%2C%20Lithuania!5e0!3m2!1sen!2suk!4v1721318972097!5m2!1sen!2suk"
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
