--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <!-- Needs section-->
         <section id="section-needs" class="grid">
             <div class="content-wrap">
-                <h2 class="content-title">We manage all needs</h2>
+                <h2 class="content-title">We manage all your needs</h2>
                 <p>
                    Over the past two years, I’ve travelled across Lithuania, 
                    exploring its hidden gems—from serene coastal towns like Palanga to the lush forests 
